Wed Jun 19 23:51:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigfixize): Use rb_absint_size.
	  (check_shiftdown): Ditto.
	  (big2ulong): Use bdigit_roomof.

Wed Jun 19 23:32:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RVALUE_PROMOTED): check consistency between oldgen flag and
	  oldgen bitmap if RGENGC_CHECK_MODE > 0.

Wed Jun 19 23:29:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_force_recycle): clear oldgen bitmap, too.

Wed Jun 19 21:02:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_uint2big): Consider environments BDIGIT is bigger than
	  long.
	  (big2ulong): Ditto.
	  (rb_big_aref): Ditto.
	  (rb_big_pack): Just call rb_integer_pack.
	  (rb_big_unpack): Just call rb_integer_unpack.

Wed Jun 19 20:51:21 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gc.c (gc_stress_get): GC.stress can be Fixnum.

Wed Jun 19 19:31:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (DIGSPERLONG): Don't define if BDIGIT is bigger than long.
	  (DIGSPERLL): Don't define if BDIGIT is bigger than LONG_LONG
	  (rb_absint_size): Consider environments BDIGIT is bigger than long.
	  Use BIGLO and BIGDN.
	  (rb_absint_singlebit_p): Ditto.
	  (rb_integer_pack): Ditto.
	  (bigsub_int): Consider environments BDIGIT is bigger than long.
	  Use SIZEOF_BDIGITS instead of sizeof(BDIGIT).
	  (bigadd_int): Ditto.
	  (bigand_int): Ditto.
	  (bigor_int): Ditto.
	  (bigxor_int): Ditto.

Wed Jun 19 15:14:30 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (struct rb_data_type_struct), gc.c: add
	  rb_data_type_struct::flags. Now, this flags is passed
	  at T_DATA object creation. You can specify FL_WB_PROTECTED
	  on this flag.

	* iseq.c: making non-shady iseq objects.

	* class.c, compile.c, proc.c, vm.c: add WB for iseq objects.

	* vm_core.h, iseq.h: constify fields to detect WB insertion.

Wed Jun 19 15:11:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_mark_children): show more info for broken object.
